Fixed wrong font on macOS

--- a/src/index.scss
+++ b/src/index.scss
@@ -4,7 +4,7 @@
 body {
   background: #ffffff;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Muli", "Segoe UI", "Roboto", "Oxygen",
+  font-family: "Muli", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
